--- a/src/css/components/SearchGameLists.scss
+++ b/src/css/components/SearchGameLists.scss
@@ -1,1 +1,6 @@
 @import "../style.scss";
+
+.search-gamelist-container {
+    width: 70%;
+    margin: 10rem auto;
+}
